--- a/Main css/main.css
+++ b/Main css/main.css
@@ -4,7 +4,7 @@ FONT IMPORTS
 ================================================================================================================================
 */
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Neuton:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Neuton:wght@200&family=Roboto:wght@300&display=swap");
@@ -34,7 +34,7 @@ FONT IMPORTS
 @import url("https://fonts.googleapis.com/css2?family=Marck+Script&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Charm&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lateef&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Niconne&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Niconne&display=swap"); */
 
 /* 
 ================================================================================================================================
