--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .title {
-    color: var(--tint-800);
-    border-bottom: 2px solid var(--vet-800);
+  color: var(--tint-800);
+  border-bottom: 2px solid var(--vet-800);
 }
 
 .calculator .grid {
-    grid-template-columns: 2fr 4fr;
-    gap: 4rem;
-    align-items: flex-start;
+  grid-template-columns: 2fr 4fr;
+  gap: 4rem;
+  align-items: flex-start;
 }
 
 /* .display {
@@ -16,91 +16,98 @@
 } */
 
 .display .flex {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .display .fa-dollar-sign {
-    padding: 0px 3px;
-    color: var(--secondary-500);
-    height: 10px;
+  padding: 0px 3px;
+  color: var(--secondary-500);
+  height: 10px;
 }
 
 .form-3 {
-    background-color: var(--grey-400);
-    border: 1px solid var(--grey-500);
-    border-radius: 5px;
-    box-shadow: var(--shadow-3);
-    margin: 40px 0;
+  background-color: var(--grey-400);
+  border: 1px solid var(--grey-500);
+  border-radius: 5px;
+  box-shadow: var(--shadow-3);
+  margin: 40px 0;
 }
 
 .enter-budget {
-    margin-top: 0px;
+  margin-top: 0px;
 }
 
 .form-info input {
-   height: 30px;
-   padding: 3px;
+  height: 30px;
+  padding: 3px;
 }
 
-.wallet-size, 
-.fa-wallet, 
+.wallet-size,
+.fa-wallet,
 .wallet-size .fa-dollar-sign {
-    color: var(--primary-500);
+  color: var(--primary-500);
+  text-align: center;
 }
 
-.wallet-out, 
-.wallet-expense, 
+.wallet-out,
+.wallet-expense,
 .wallet-out .fa-dollar-sign {
-    color: var(--red-500);
+  text-align: center;
+  color: var(--red-500);
 }
 
-.fa-hand-holding-dollar, 
-.balance, 
+.fa-hand-holding-dollar,
+.balance,
 .balance .fa-dollar-sign {
-    color: var(--stroke-500);
+  text-align: center;
+  color: var(--stroke-500);
+}
+
+.wallet-size,
+.wallet-out,
+.balance {
+  text-align: center;
+  font-size: 40px;
 }
 
 .rem-edit {
-    text-align: right;
+  text-align: right;
 }
 
 .delete {
-    color: var(--red-400);
-    /* cursor: pointer; */
+  color: var(--red-400);
+  /* cursor: pointer; */
 }
 
 .delete:hover {
-    color: var(--red-600);
+  color: var(--red-600);
 }
 
 .edit {
-    color: var(--primary-300);
-    /* cursor: pointer; */
+  color: var(--primary-300);
+  /* cursor: pointer; */
 }
 
 .edit:hover {
-    color:  var(--primary-500);
+  color: var(--primary-500);
 }
 
 .alert {
-    text-align: left;
+  text-align: left;
 }
-
-
 
 /* Responsiveness */
 @media (max-width: 1200px) {
-    .calculator .grid {
-        grid-template-columns: 1fr;
-       text-align: center;
-    }
+  .calculator .grid {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
 
-    .span {
-        text-align: center;
-    }
+  .span {
+    text-align: center;
+  }
 
-    .calculator .grid {
-        gap: 1rem;
-    }
+  .calculator .grid {
+    gap: 1rem;
+  }
 }
-
